@@ -1,5 +1,5 @@
 # Static values
-__version__  = '0.5.1'
+__version__  = '0.5.2'
 NAME         = 'rfctools_common'
 VERSION      = [ int(i) if i.isdigit() else i for i in __version__.split('.') ]
 
